Feat: Adicinado mensagem caso o usuário digite valor menor que zero assim como valor min no input sendo 1

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Somar Divisores</h1>
     <form>
       <label for="valor">Digite um valor:</label>
-      <input type="number" id="valor" name="valor" />
-      <button type="button" onclick="somarDivisores()">Calcular</button>
+      <input type="number" id="valor" name="valor" min="1" />
+      <button type="button" id="btnCalcular" onclick="somarDivisores()">
+        Calcular
+      </button>
     </form>
     <div id="resultado"></div>
     <script src="script.js"></script>
